change comparison user option to comp option NOT WORKING